<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingTop="30sp"
    android:paddingRight="10sp"
    android:paddingLeft="10sp"
    android:paddingBottom="10sp"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".SettingActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/sys_setting"
            android:textColor="#000000"
            android:textSize="20sp" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5sp"
        android:padding="10sp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/psw_start"
            android:textSize="20sp">
            ></TextView>

        <Switch
            android:id="@+id/switch_control"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:thumb="@drawable/thumb_bg"
            android:track="@drawable/switch_bg" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10sp"
            android:text="更改密码"
            android:textColor="#000000"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/first_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_psw"
            android:theme="@style/MyEditText" />

        <EditText
            android:id="@+id/second_ed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_psw_again"
            android:theme="@style/MyEditText" />

        <Button
            android:id="@+id/change_psw"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/white_bg"
            android:text="@string/change_psw"
            android:textSize="15sp" />
    </LinearLayout>


    <RelativeLayout
      android:padding="10sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/diy_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="自定义背景图片  >"
            android:background="?android:selectableItemBackground"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/recovery_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:background="?android:selectableItemBackground"
            android:text="恢复默认背景"></TextView>
    </RelativeLayout>


    <LinearLayout
        android:id="@+id/goqq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:background="?android:selectableItemBackground"
        android:gravity="center">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:src="@mipmap/guide" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="点这里"
            android:textColor="#e8e8e8"></TextView>
    </LinearLayout>
</LinearLayout>